[package]
name = "arc-string-interner"
version = "0.2.0"
authors = ["Artem Shein <artem.shein@github.com>", "Robbepop"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/artemshein/arc-string-interner"
documentation = "https://docs.rs/arc-string-interner"
keywords = ["interner", "intern", "string", "str", "symbol"]
description = """An efficient string interning data structure with minimal memory-footprint
and fast access to the underlying contents.
"""
categories = ["data-structures"]
edition = "2018"

[dependencies]
serde = { version = "1.0.0", optional = true }
parking_lot = "0.11.1"
init_with = "1.1.0"
array-init = "2.0.0"

[dev-dependencies]
fnv = "1.0.0" # required bench tests
serde_json = "1.0.0" # required for testing the serde imlementation
lazy_static = "1.0.0" # required for bench tests

[features]
default       = ["serde_support"]
bench         = []
serde_support = ["serde"]

[badges]
travis-ci = { repository = "Robbepop/string-interner" }
appveyor = { repository = "Robbepop/string-interner", branch = "master", service = "github" }
